k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-sorteo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: api-sorteo
