k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-sorteo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-sorteo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-sorteo
            port:
              number: 80
